:recycle: refactor : StringUtils.isBlank 적용 및 로그 수정